global controller advice and more unit tests